Release v1.36.0 Shared Playlists API
